fix(mobile/chat-bubbles): Scope `.agent-turn.relative` z-index only on mobiles to prevent overlap with sticky header on desktop
- Apply z-index to `.agent-turn.relative` only on mobile screens to prevent overlap the GPT chat bubble with sticky header on desktop

Changes summary:
- Scoped the z-index of `.agent-turn.relative` to mobile screens only, resolving overlap GPT chat bubble issues with the sticky header on desktop views.

--- a/src/sass/elements/_right--main.scss
+++ b/src/sass/elements/_right--main.scss
@@ -195,9 +195,12 @@ main [data-testid^='conversation-turn-'] {
 	/* @ RIGHT - CHATS BUBBLES - GPT */
 	&:has([data-message-author-role='assistant']) {
 
-		/* ! Without this there was strange issue with User's chat overlaping the menu for "GPT-4" or "GPT-3.5" to choose model in gpt's chat bubble' footer - ONLY FOR MOBILE which is even more strange!!! */
-		.agent-turn.relative {
-			z-index: 10;
+		/* ! Without this there was strange issue with User's chat overlaping the menu for "GPT-4" or "GPT-3.5" to choose model in gpt's chat bubble' footer - ONLY FOR MOBILE which is even more strange!!! 
+		Ako neogranicimo ovo samo za mobile, na desktopu ce GPT chat da ide preko sticky headera!! Dok je u mobile ok valjda */
+		@include dev(mob) {
+			.agent-turn.relative {
+				z-index: 10;
+			}
 		}
 
 		.markdown {
